# obs

./: Cargo.toml  LICENSE  README.md
src/: args.rs  main.rs  utils.rs
src/cmd/: backup.rs  goto.rs  mod.rs  open.rs  options.rs  sync.rs  utils.rs
